set the no display limit to true.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             var noDisplayLimit = document.createElement("input");
                             noDisplayLimit.type = "checkbox";
                             noDisplayLimit.id = "noDisplayLimit";
-                            noDisplayLimit.check = false;
+                            noDisplayLimit.checked = true;
                             var noDisplayLimitParent = document.createElement("p");
                             noDisplayLimitParent.innerHTML = "no display limit?";
                             noDisplayLimitParent.appendChild(noDisplayLimit);
